add password recovery route

--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ APP_DB_USERNAME=root
 APP_DB_PASSWORD=123456
 
 # APP GENERAL
-APP_ORIGIN=http://localhost:3000 http://localhost:2999
+APP_ORIGIN=http://localhost:3000
 APP_GOOGLE_CLIENT_ID=1051149468787-m1er2s5t5ijmvudfko48a03s2rq46mk7.apps.googleusercontent.com
 APP_GOOGLE_CLIENT_SECRET=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
 APP_GOOGLE_CLIENT_AUTHORIZED_CALLBACK_URI=http://localhost:0001
