--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express-session": "^1.17.3",
     "express-session-sequelize": "^2.3.0",
     "forefront-polus": "file:tarball/forefront-polus-1.2.1.tgz",
+    "httpolyglot": "^0.1.2",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
